--- a/FAQ.html
+++ b/FAQ.html
@@ -141,19 +141,18 @@
     <!-- Footer -->
     <section class="footer-container bg-dark ">
         <div class="container">
-            <div class="row">
-
-            </div>
             <footer class="py-3 my-4 text-light">
                 <div>
-                    <a href="#faq"><p class="text-light text-center">Back to Top</p></a>
+                    <a class="nav-link text-light " aria-current="page" href="./FAQ.html">
+                        <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                    </a>
                 </div>
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                    <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
-                    <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
-                    <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
-                    <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
-                    <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                    <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
+                    <a class="nav-link text-light " aria-current="page" href="./index.html">Artists</a>
+                    <a class="nav-link text-light " aria-current="page" href="./index.html">Contact</a>
+                    <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
                 </ul>
                 <div class="container-md">
                     <div class="row">
