--- a/gallery.html
+++ b/gallery.html
@@ -16,8 +16,10 @@
     <!-- Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-        <!-- Masonry -->
-        <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" defer></script>
+    <!-- Masonry -->
+    <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
+        integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
+        defer></script>
     <link rel="stylesheet" href="/style.css">
     <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
@@ -36,8 +38,8 @@
                         src="./imgs/WPTI_Icon_White.png"></img>
                 </a>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                    <li><a href="./index.html" class="nav-link px-2 link-secondary">Home</a></li>
-                    <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
+                    <li><a href="./index.html" class="nav-link px-2 link-light">Home</a></li>
+                    <li><a href="./gallery.html" class="nav-link px-2 link-secondary">Galleries</a></li>
                     <li><a href="./index.html" class="nav-link px-2 link-light">Artists</a></li>
                     <li><a href="./index.html" class="nav-link px-2 link-light">Contact</a></li>
                     <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
@@ -51,48 +53,67 @@
                         <div class="">
                             <h2 class="text-center text-light">Gallery</h2>
                         </div>
-                        <div class="col-12">
+                        <div class="col-12 col-md-5">
                             <a href="./index.html" class="back text-decoration-none text-light">
                                 <h5 class=""> ← Go Back</h5>
                             </a>
+
                         </div>
+
                     </div>
                     <div class="row" data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
+                        <div class="col-xs-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>
+                        <div class="col-xs-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>
+                        <div class="col-xs-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>
+                        <div class="col-xs-6 col-lg-4">
+                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        </div>
                         <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>                        <div class="col-sm-6 col-lg-4">
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
                             <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
                         </div>
                     </div>
@@ -115,14 +136,16 @@
             <div class="container">
                 <footer class="py-3 my-4 text-light">
                     <div>
-                        <p class="text-light text-center">Back to Top</p>
+                        <a href="#home" class="text-success text-decoration-none text-center text">
+                            <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                        </a>
                     </div>
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                        <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
-                        <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
-                        <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
-                        <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
-                        <li><a href="./FAQ.html" class="nav-link px-2 link-light">FAQs & Aftercare</a></li>
+                        <a class="nav-link text-light active" aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
+                        <a class="nav-link text-light " aria-current="page" href="./index.html">Artists</a>
+                        <a class="nav-link text-light " aria-current="page" href="./index.html">Contact</a>
+                        <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
                     </ul>
                     <div class="container-md">
                         <div class="row">
