--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </ul>
             </header>
         </section>
-        <section id="home"class="landing-container">
+        <section id="home" class="landing-container">
             <img src="https://images.unsplash.com/photo-1565058379802-bbe93b2f703a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 class="background">
             <!-- <h1 class="title text-center col-12">White Pine Tattoo </h1> -->
@@ -53,7 +53,7 @@
             </div>
             <div class="title-btn d-flex justify-content-center">
                 <a href="#contact"><button class="btn btn-primary m-2 rounded-2 ps-4 pe-4">Contact Us</button></a>
-                <button href="./gallery.html" class="btn btn-secondary m-2 rounded-2">View Galleries</button>
+                <a href="./gallery.html"> <button class="btn btn-secondary m-2 rounded-2">View Galleries</button> </a>
             </div>
             <br>
             <div class="containter">
@@ -189,7 +189,8 @@
             <div class="container">
                 <div class="container">
                     <div class="row">
-                        <h2 class="contact-text text-center">Want to book an appointment? fill out this form and we will get back to
+                        <h2 class="contact-text text-center">Want to book an appointment? fill out this form and we will
+                            get back to
                             you
                             as soon as possible.</h2>
                         <div class="container mt-2 d-flex justify-content-center col-12 col-md-6">
@@ -204,7 +205,8 @@
                             </div>
                         </div>
                         <!-- form -->
-                        <h3 class="text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact us at: (123) 456-7890</h3>
+                        <h3 class="text-center text-white link-light text-decoration-none contact-text mt-4"> Or contact
+                            us at: (123) 456-7890</h3>
                         <div class="container col-12 col-md-5 d-flex justify-content-center p-3">
                             <p class="bg-dark text-light p-3 rounded-1">
                                 *Due to a high volume of incoming messages, we encourage you to read our FAQ before
@@ -290,13 +292,16 @@
             <div class="container">
                 <footer class="py-3 my-4 text-light">
                     <div>
-                       <a href="#home"><p class="text-light text-center text">Back to Top</p></a> 
+                        <a href="#home" class="text-success text-decoration-none text-center text">
+                            <p class="text-success text-decoration-none text-center text">Back to Top</p>
+                        </a>
                     </div>
                     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-light">
-                        <a class="nav-link text-light active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">About</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">Contact</a>
-                        <a class="nav-link text-light " aria-current="page" href="#">FAQ & Aftercare</a>
+                        <a class="nav-link text-light active" aria-current="page" href="#home">Home</a>
+                        <a class="nav-link text-light " aria-current="page" href="./gallery.html">Galleries</a>
+                        <a class="nav-link text-light " aria-current="page" href="#artists">Artists</a>
+                        <a class="nav-link text-light " aria-current="page" href="#contact">Contact</a>
+                        <a class="nav-link text-light " aria-current="page" href="./FAQ.html">FAQ & Aftercare</a>
                     </ul>
                     <div class="container-md">
                         <div class="row">
