--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
         integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
         defer></script>
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./style.css">
     <meta name="theme-color" content="#fafafa">
     <script src="https://kit.fontawesome.com/9de7b5c7f4.js" crossorigin="anonymous"></script>
@@ -47,91 +47,94 @@
                 </ul>
             </header>
         </section>
-        <section>
-            <div class="header-container bg-dark">
-                <div class="container">
+        <section id='gallery' class="gallery-container bg-dark">
+            <div class="header-container bg-dark border-bottom">
+                <div class="">
                     <div class="row">
-                        <div class="">
-                            <h2 class="text-center text-light">Gallery</h2>
+                        <div class="faq-banner img img-fluid">
+                            <h2 class="text-center text-light">Our Gallery</h2>
                         </div>
-                        <div class="col-12 col-md-5">
-                            <a href="./index.html" class="back text-decoration-none text-light">
-                                <h5 class=""> ← Go Back</h5>
-                            </a>
-
-                        </div>
-
-                    </div>
-                    <div class="row" data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
-                        <div class="col-xs-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-xs-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-xs-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-xs-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                        </div>
-                        <div class="col-sm-6 col-lg-4">
-                            <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <div class="container border-top pt-3 pb-3">
+                            <div class="row pe-2 ps-2">
+                                <div class="col-6 text-start">
+                                    <a href="./index.html" class="back text-decoration-none text-light">
+                                        <h5 class=""> ← Go Back</h5>
+                                    </a>
+                                </div>
+                                <div class=" col-6 text-end">
+                                    <label class="text-light" for="artist">Artist: </label>
+                                    <select name="artist" class="ps-1 pe-5" id="artistSelect">
+                                        <option>Anne</option>
+                                        <option>Jeff</option>
+                                        <option selected>All</option>
+                                    </select>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="photos-container">
+        <div class="header-container bg-dark">
             <div class="container">
-                <div class="row">
-                    <div class="col">
-
-
-
+                <div class="row" data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                    </div>
+                    <div class="col-sm-6 col-lg-4">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <!-- Footer -->
         <section class="footer-container bg-dark ">
             <div class="container">
