--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
         </section>
         <section class="faq-container bg-dark m-5">
-            <div class="container">
+            <div class="container border-bottom pb-3">
                 <div class="row">
                     <div class="text-center">
                         <div class="container bg-dark">
