modified placeholder images

--- a/gallery.html
+++ b/gallery.html
@@ -79,59 +79,48 @@
             <div class="container">
                 <div class="row" data-masonry='{"percentPosition": true },  "itemSelector": ".col" }'>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
+                    </div>                       
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
+                    </div>            
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
+                    </div>                    
                     <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
+                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Bunny/">
                     </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <img class="img img-fluid" src="https://source.unsplash.com/random/?Banana/">
-                    </div>
+
                 </div>
             </div>
         </div>
