--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         src="./imgs/WPTI_Icon_White.png"></img>
                 </a>
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 pe-3">
-                    <li><a href=".landing-container" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="#home" class="nav-link px-2 link-secondary">Home</a></li>
                     <li><a href="./gallery.html" class="nav-link px-2 link-light">Galleries</a></li>
                     <li><a href="#artists" class="nav-link px-2 link-light">Artists</a></li>
                     <li><a href="#contact" class="nav-link px-2 link-light">Contact</a></li>
