--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
         <!-- Header -->
         <section class="header-container bg-dark">
             <header
-                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+                class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
                 <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                     <img class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"
                         src="./imgs/WPTI_Icon_White.png"></img>
@@ -115,8 +115,8 @@
             </div>
         </section>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous" async defer></script>
-    <script src="app.js" async defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.3.slim.min.js" integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous" ></script>
+    <script src="app.js?v=1.0"async defer ></script>
 </body>
 
 </html>
